# bendersx-engine

./: LICENSE  README.md  pyproject.toml
docs/: developer_guide.md  index.md  usage.md
scripts/: run_benders.py
src/bendersx_engine/: __init__.py  algorithm.py  benchmark.py  bigm.py  cli.py  config.py  cuts.py  deploy.py  env_detection.py  master.py  matrix_generation.py  optimizations.py  partitioning.py  shared_memory.py  simple_matrix.py  subproblem.py
src/numpy/: __init__.py
src/scipy/: __init__.py  sparse.py
tests/: conftest.py  test_algorithm.py  test_benchmark.py  test_bigm.py  test_config.py  test_cuts.py  test_env_detection.py  test_master.py  test_matrix_generation.py  test_optimizations.py  test_partitioning.py  test_shared_memory.py  test_subproblem.py
