[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bendersx-engine"
version = "0.1.0"
description = "Production-ready Benders decomposition engine"
authors = [{name = "Optimization Team"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

